--- a/app/ui/WXCard/WXCard.module.css
+++ b/app/ui/WXCard/WXCard.module.css
@@ -1,6 +1,6 @@
 .container {
 	width: 100%;
-	min-height: 70px;
+	min-height: 71px;
 }
 
 .card {
