--- a/app/ui/WindGraph/WindGraph.module.css
+++ b/app/ui/WindGraph/WindGraph.module.css
@@ -1,4 +1,5 @@
 .wrapper {
+	width: 100%;
 	max-width: 100%;
 }
 
@@ -52,19 +53,20 @@
 	left: 0;
 	z-index: 1003;
 }
-/* Aligns with the graph component with the same border, margin is added to cover full height of component */
+
 .fallback {
-	height: 300px;
-	width: 100%;
-	max-width: 100%;
-	margin-bottom: 23px;
-	background-color: rgba(var(--callout-rgb), 0.5);
-	border: 1px solid rgba(var(--callout-border-rgb), 0.3);
-	border-radius: var(--border-radius);
+	display: flex;
+	align-items: center;
+	justify-content: center;
+}
+
+.legendPlaceholder {
+	height: 23px;
 }
 
 @media (max-width: 700px) {
-	.container {
+	.container,
+	.wrapper {
 		max-width: 450px;
 	}
 }
